# usb-autodump-cpp

./: CMakeLists.txt  SPEC.md  config.json
.github/workflows/: build-deb.yml  build.yml
linux/: usb-autodump.desktop
src/: config.cpp  config.h  copy_engine.cpp  copy_engine.h  crypto.cpp  crypto.h  disk_tool.cpp  disk_tool.h  file_record.cpp  file_record.h  ftp_uploader.cpp  ftp_uploader.h  log_panel.cpp  log_panel.h  main.cpp  mainwindow.cpp  mainwindow.h  settings_dialog.cpp  settings_dialog.h  usb_card.cpp  usb_card.h  usb_monitor.cpp  usb_monitor.h
